<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="cn.nbetray.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_proxies"
        android:name="cn.nbetray.ui.proxies.ProxiesFragment"
        android:label="@string/nav_proxies"
        tools:layout="@layout/fragment_proxies" />

    <fragment
        android:id="@+id/navigation_rules"
        android:name="cn.nbetray.ui.rules.RulesFragment"
        android:label="@string/nav_rules"
        tools:layout="@layout/fragment_rules" />

    <fragment
        android:id="@+id/navigation_connections"
        android:name="cn.nbetray.ui.connections.ConnectionsFragment"
        android:label="@string/nav_connections"
        tools:layout="@layout/fragment_connections" />

    <fragment
        android:id="@+id/navigation_logs"
        android:name="cn.nbetray.ui.logs.LogsFragment"
        android:label="@string/nav_logs"
        tools:layout="@layout/fragment_logs" />

    <fragment
        android:id="@+id/navigation_config"
        android:name="cn.nbetray.ui.config.ConfigFragment"
        android:label="@string/nav_config"
        tools:layout="@layout/fragment_config" />

    <fragment
        android:id="@+id/navigation_backend"
        android:name="cn.nbetray.ui.backend.BackendFragment"
        android:label="@string/backend_config"
        tools:layout="@layout/fragment_backend" />

</navigation>
